# pico2w-shell-rs

./: .gitignore  Cargo.toml  README.md  build_app.bat  build_err.txt  package_app.py  rp2350.x
.cargo/: config.toml
cyw43-firmware/: README.md
src/: ble.rs  cli.rs  dhcp.rs  http_server.rs  log_filter.rs  logger.rs  main.rs  ntp.rs
