
[package]
edition = "2024"
name = "pico2w-shell-rs"
version = "0.1.0"
license = "MIT or Apache-2.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
fugit = "0.3.7"
defmt = "1"
defmt-rtt = "1"
static_cell = "2"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", default-features = false }
heapless = "0.9"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "rp235xa", "time-driver", "critical-section-impl", "binary-info"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "udp", "dhcpv4", "multicast", "dns"] }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-io-async = "0.7.0"
assign-resources = "0.4.1"
littlefs2 = "0.6.1"
edge-dhcp = "0.7.0"

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[profile.release]
debug = 2

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy.git" }
